// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tag /> DoubleColorWithoutIcon story renders snapshot 1`] = `
<div
  class="MuiButtonBase-root MuiChip-root css-i86qva MuiChip-colorPrimary MuiChip-clickableColorPrimary MuiChip-clickable"
  role="button"
  tabindex="0"
>
  <span
    class="MuiChip-label"
  >
    Label
  </span>
  <span
    class="MuiTouchRipple-root"
  />
</div>
`;

exports[`<Tag /> Primary story renders snapshot 1`] = `
<div
  class="MuiButtonBase-root MuiChip-root css-1f3a35n MuiChip-colorPrimary MuiChip-clickableColorPrimary MuiChip-clickable"
  role="button"
  tabindex="0"
>
  <span
    class="MuiChip-label"
  >
    Label
  </span>
  <span
    class="MuiTouchRipple-root"
  />
</div>
`;

exports[`<Tag /> PrimaryWithIcon story renders snapshot 1`] = `
<div
  class="MuiButtonBase-root MuiChip-root css-13nlwsz MuiChip-colorPrimary MuiChip-clickableColorPrimary MuiChip-clickable"
  role="button"
  tabindex="0"
>
  <div
    class="css-jbvua0"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root css-1i7v7tv"
      data-jest-file-name="IconCheckCircleLarge.svg"
      data-jest-svg-name="IconCheckCircleLarge"
      data-testid="IconCheckCircleLarge"
      fillcontrast="white"
      focusable="false"
      viewBox="0 0 32 32"
    />
  </div>
  <span
    class="MuiChip-label"
  >
    Label
  </span>
  <span
    class="MuiTouchRipple-root"
  />
</div>
`;

exports[`<Tag /> RoundedPrimary story renders snapshot 1`] = `
<div
  class="MuiButtonBase-root MuiChip-root css-pmlld3 MuiChip-colorPrimary MuiChip-clickableColorPrimary MuiChip-clickable"
  role="button"
  tabindex="0"
>
  <span
    class="MuiChip-label"
  >
    Label
  </span>
  <span
    class="MuiTouchRipple-root"
  />
</div>
`;

exports[`<Tag /> RoundedPrimaryWithIcon story renders snapshot 1`] = `
<div
  class="MuiButtonBase-root MuiChip-root css-1i243g5 MuiChip-colorPrimary MuiChip-clickableColorPrimary MuiChip-clickable"
  role="button"
  tabindex="0"
>
  <div
    class="css-jbvua0"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root css-1i7v7tv"
      data-jest-file-name="IconCheckCircleLarge.svg"
      data-jest-svg-name="IconCheckCircleLarge"
      data-testid="IconCheckCircleLarge"
      fillcontrast="white"
      focusable="false"
      viewBox="0 0 32 32"
    />
  </div>
  <span
    class="MuiChip-label"
  >
    Label
  </span>
  <span
    class="MuiTouchRipple-root"
  />
</div>
`;

exports[`<Tag /> RoundedSecondary story renders snapshot 1`] = `
<div
  class="MuiButtonBase-root MuiChip-root css-u97u7r MuiChip-colorPrimary MuiChip-clickableColorPrimary MuiChip-clickable"
  role="button"
  tabindex="0"
>
  <span
    class="MuiChip-label"
  >
    Label
  </span>
  <span
    class="MuiTouchRipple-root"
  />
</div>
`;

exports[`<Tag /> RoundedSecondaryWithIcon story renders snapshot 1`] = `
<div
  class="MuiButtonBase-root MuiChip-root css-v7xsjr MuiChip-colorPrimary MuiChip-clickableColorPrimary MuiChip-clickable"
  role="button"
  tabindex="0"
>
  <div
    class="css-jbvua0"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root css-1i7v7tv"
      data-jest-file-name="IconCheckCircleLarge.svg"
      data-jest-svg-name="IconCheckCircleLarge"
      data-testid="IconCheckCircleLarge"
      fillcontrast="white"
      focusable="false"
      viewBox="0 0 32 32"
    />
  </div>
  <span
    class="MuiChip-label"
  >
    Label
  </span>
  <span
    class="MuiTouchRipple-root"
  />
</div>
`;

exports[`<Tag /> Secondary story renders snapshot 1`] = `
<div
  class="MuiButtonBase-root MuiChip-root css-11c2o8r MuiChip-colorPrimary MuiChip-clickableColorPrimary MuiChip-clickable"
  role="button"
  tabindex="0"
>
  <span
    class="MuiChip-label"
  >
    Label
  </span>
  <span
    class="MuiTouchRipple-root"
  />
</div>
`;

exports[`<Tag /> SecondaryWithIcon story renders snapshot 1`] = `
<div
  class="MuiButtonBase-root MuiChip-root css-1fq0g95 MuiChip-colorPrimary MuiChip-clickableColorPrimary MuiChip-clickable"
  role="button"
  tabindex="0"
>
  <div
    class="css-jbvua0"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root css-1i7v7tv"
      data-jest-file-name="IconCheckCircleLarge.svg"
      data-jest-svg-name="IconCheckCircleLarge"
      data-testid="IconCheckCircleLarge"
      fillcontrast="white"
      focusable="false"
      viewBox="0 0 32 32"
    />
  </div>
  <span
    class="MuiChip-label"
  >
    Label
  </span>
  <span
    class="MuiTouchRipple-root"
  />
</div>
`;

exports[`<Tag /> Test story renders snapshot 1`] = `
<div
  class="MuiButtonBase-root MuiChip-root css-1f3a35n MuiChip-colorPrimary MuiChip-clickableColorPrimary MuiChip-clickable"
  data-testid="tags"
  role="button"
  tabindex="0"
>
  <span
    class="MuiChip-label"
  >
    Label
  </span>
  <span
    class="MuiTouchRipple-root"
  />
</div>
`;

exports[`<Tag /> TripleColorWithIcon story renders snapshot 1`] = `
<div
  class="MuiButtonBase-root MuiChip-root css-ildeve MuiChip-colorPrimary MuiChip-clickableColorPrimary MuiChip-clickable"
  role="button"
  tabindex="0"
>
  <div
    class="css-jbvua0"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root css-1i7v7tv"
      data-jest-file-name="IconCheckCircleLarge.svg"
      data-jest-svg-name="IconCheckCircleLarge"
      data-testid="IconCheckCircleLarge"
      fillcontrast="white"
      focusable="false"
      viewBox="0 0 32 32"
    />
  </div>
  <span
    class="MuiChip-label"
  >
    Label
  </span>
  <span
    class="MuiTouchRipple-root"
  />
</div>
`;
